--- a/indexx.html
+++ b/indexx.html
@@ -71,7 +71,18 @@
       </div>
       <div class="box2">
         <div class="card">
-          <img src="./img/Group 97.jpg" alt="" />
+          <div class="carousel">
+            <div class="slides">
+              <img src="https://picsum.photos/1280/720?random=1" alt="slide image" class="slide">
+              <img src="https://picsum.photos/1280/720?random=2" alt="slide image" class="slide">
+              <img src="https://picsum.photos/1280/720?random=3" alt="slide image" class="slide">
+            </div>
+            <div class="controls">
+              <div class="control prev-slide">&#9668;</div>
+              <div class="control next-slide">&#9658;</div>
+            </div>
+          </div>
+          <!-- <img src="./img/Group 97.jpg" alt="" /> -->
         </div>
         <div class="btns">
           <span>#dasturlash_kurslari</span>
@@ -147,7 +158,22 @@
 
     <section>
       <div>
-        <div class="rasm">
+        <div class="rasm"> 
+          
+          <div class="carousel">
+            <div class="slidesa">
+              <img src="https://picsum.photos/1280/720?random=1" alt="slide image" class="slide">
+              <img src="https://picsum.photos/1280/720?random=2" alt="slide image" class="slide">
+              <img src="https://picsum.photos/1280/720?random=3" alt="slide image" class="slide">
+            </div>
+            <div class="controls">
+              <div class="control prev-slide">&#9668;</div>
+              <div class="control next-slide">&#9658;</div>
+            </div>
+          </div>
+
+
+
           <img src="./img/Caraousel Rectangle.png" alt="">
         </div>
       </div>
@@ -216,7 +242,9 @@
     </section>
   </div>
   <footer>
-    <div class="footer">
+    <div class="footer ">
+      <div class="container">
+
       <div class="footer_flexx container">
 
       <div class="footer_logo">
@@ -312,6 +340,8 @@ Tinchlik ko’chasi, 6-uy
       </div>
       </div>
     </div>
+  </div>
+
     <div  class=" line "></div>
     <div class="container">
       <div class="footer_end">
@@ -326,6 +356,7 @@ Tinchlik ko’chasi, 6-uy
 
     </div>
   </footer>
+  <script src="js.js"> </script>
 </body>
 
 </html>
