--- a/indexx.html
+++ b/indexx.html
@@ -161,10 +161,10 @@
         <div class="rasm"> 
           
           <div class="carousel">
-            <div class="slidesa">
+            <div class="slides">
               <img src="https://picsum.photos/1280/720?random=1" alt="slide image" class="slide">
               <img src="https://picsum.photos/1280/720?random=2" alt="slide image" class="slide">
-              <img src="https://picsum.photos/1280/720?random=3" alt="slide image" class="slide">
+              <img src="https://picsum.photos/1280/720?random=3" alt="slide image" class="slide"> 
             </div>
             <div class="controls">
               <div class="control prev-slide">&#9668;</div>
