--- a/indexx.html
+++ b/indexx.html
@@ -216,9 +216,9 @@
         <div class="Name_foto">
 
         <div class="Name_left">
-          <img class="logos" src="/img/pasti_logos.png" alt="">
-          <img class="loptops" src="/img/pasti_loptop.png" alt="">
-          <img class="logo" src="/img/pasti_logo.png" alt="">
+          <img class="logos" src="./img/pasti_logos.png" alt="">
+          <img class="loptops" src="./img/pasti_loptop.png" alt="">
+          <img class="logo" src="./img/pasti_logo.png" alt="">
         </div>
       </div>
 
