--- a/index.html
+++ b/index.html
@@ -39,8 +39,17 @@
                     <h1 class="header__title">IT Park kreativ insolar
                         yig’ilgan makon</h1>
                     <p class="header__txt">Start Local & Go Global</p>
+                    <a href="#!">Ariza qoldirish     <i class="fa-sharp fa-solid fa-right-long"></i></a>
                 </div>
                 <div class="header__content-image">
+                    <img src="./img/Group 97.jpg" alt="">
+                    <div class="header__content-image-bottom">
+                        <span>#dasturlash_kurslari</span>
+                        <span>#coworking</span>
+                        <span>#biznes_inkubator</span>
+                        <span>#til_kurslari</span>
+                        <span>#design kurslari</span>
+                    </div>
     
                 </div>
             </div>
@@ -58,8 +67,52 @@
                             <p>Qulay muhitda ta’lim olish imkoniyati</p>
                         </div>
                     </div>
+                    <div class="advantages__card">
+                        <h2>1</h2>
+                        <div class="advantages__card-texts">
+                            <h3>Malakali mutaxassislar</h3>
+                            <p>Qulay muhitda ta’lim olish imkoniyati</p>
+                        </div>
+                    </div>
+                    <div class="advantages__card">
+                        <h2>1</h2>
+                        <div class="advantages__card-texts">
+                            <h3>O’sish imkoniyati</h3>
+                            <p>Qulay muhitda ta’lim olish imkoniyati</p>
+                        </div>
+                    </div>
                 </div>
             </div>
+        </section>
+        <section class="course">
+            <div class="container">
+                <div class="course_title">
+                    <h2>Kurslar</h2>
+                    <button>Web dasturlash</button>
+                    <button>Mobil dasturlash</button>
+                    <button>Grafik design</button>
+                    <button>Ingliz tili</button>
+                    <button>Yana ko’rsatish <i class="fa-sharp fa-solid fa-right-long"></i></button>
+
+
+                </div>
+                <div class="course_content">
+                    <h2>
+                        Dasturlashni o’rganib, muammolarga kreativ yechim berishni o’rganisnh
+                    </h2>
+                    <p>
+                        Dasturlashni o’rganib, muammolarga kreativ yechim berishni o’rganisnh
+                    </p>
+                    <a href="#!">Kursga yozilish</a>
+                    <img src="img/G;SDKVN.png" alt="">
+
+
+
+                </div>
+
+
+            </div>
+
         </section>
     </main>
     <footer>
