--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                     <button>Mobil dasturlash</button>
                     <button>Grafik design</button>
                     <button>Ingliz tili</button>
-                    <button>Yana ko’rsatish <i class="fa-sharp fa-solid fa-right-long"></i></button>
+                    <button id="course_btns">Yana ko’rsatish <i class="fa-sharp fa-solid fa-right-long"></i></button>
 
 
                 </div>
@@ -103,7 +103,7 @@
                     <p>
                         Dasturlashni o’rganib, muammolarga kreativ yechim berishni o’rganisnh
                     </p>
-                    <a href="#!">Kursga yozilish</a>
+                    <a href="#!">Kursga yozilish <i class="fa-sharp fa-solid fa-right-long"></i></a>
                     <img src="img/G;SDKVN.png" alt="">
 
 
