--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                     <button>Mobil dasturlash</button>
                     <button>Grafik design</button>
                     <button>Ingliz tili</button>
-                    <button id="course_btns">Yana ko’rsatish <i class="fa-sharp fa-solid fa-right-long"></i></button>
+                    <button id="course_btns">Yana ko’rsatish <i class="fa-solid fa-down-long"></i></button>
 
 
                 </div>
@@ -157,8 +157,11 @@
                 <h4>Sertifikat tekshirish</h4>
                 <div class="certificate_box">
                     <div class="certificate_content">
-                        <div class="certificate_content_title">
-                            <h3>IT Park orali olingan sertifakatni tekshirish imkoniyati</h3>
+                        <div class="certificate_content_title ">
+                            <div>
+                                <h3>IT Park orali olingan sertifakatni tekshirish imkoniyati</h3>
+                                <p>Dasturlashni o’rganib, muammolarga kreativ yechim berishni o’rganisnh</p>
+                            </div>
                             <a href="#!">Tekshirish <i class="fa-sharp fa-solid fa-right-long"></i></a>
                         </div>
                     </div>
