--- a/index.html
+++ b/index.html
@@ -71,20 +71,25 @@
                             <h3>Qulaylik</h3>
                             <p>Qulay muhitda ta’lim olish imkoniyati</p>
                         </div>
-                    </div>
-                    <div class="advantages__card">
-                        <h2>1</h2>
+                        <img src="/img/Rectangle 5.png" alt="">
+                    </div >
+                    <div class="advantages__card  advantages__cards2    ">
                         <div class="advantages__card-texts">
                             <h3>Malakali mutaxassislar</h3>
                             <p>Qulay muhitda ta’lim olish imkoniyati</p>
+                        </div >
+                        
+                        <div class="advantages__card-texts">
+                        <h2>2</h2>
                         </div>
-                    </div>
+                        <img src="/img/3.png" alt=""></div>
                     <div class="advantages__card">
                         <h2>1</h2>
                         <div class="advantages__card-texts">
                             <h3>O’sish imkoniyati</h3>
                             <p>Qulay muhitda ta’lim olish imkoniyati</p>
                         </div>
+                        <img src="/img/32333.png" alt="">
                     </div>
                 </div>
             </div>
@@ -113,7 +118,7 @@
                         <a href="#!">Kursga yozilish <i class="fa-sharp fa-solid fa-right-long"></i></a>
                         <img src="img/G;SDKVN.png" alt="">
                     </div>
-                    <div class="course_content_box">
+                    <div class="course_content_box course_content_boxs1">
 
                         <h2>
                             Dasturlashni o’rganib, muammolarga kreativ yechim berishni o’rganisnh
@@ -122,9 +127,9 @@
                             Dasturlashni o’rganib, muammolarga kreativ yechim berishni o’rganisnh
                         </p>
                         <a href="#!">Kursga yozilish <i class="fa-sharp fa-solid fa-right-long"></i></a>
-                        <img src="img/G;SDKVN.png" alt="">
+                        <img src="img/hone.png" alt="">
                     </div>
-                    <div class="course_content_box">
+                    <div class="course_content_box course_content_box_color">
 
                         <h2>
                             Dasturlashni o’rganib, muammolarga kreativ yechim berishni o’rganisnh
@@ -133,7 +138,7 @@
                             Dasturlashni o’rganib, muammolarga kreativ yechim berishni o’rganisnh
                         </p>
                         <a href="#!">Kursga yozilish <i class="fa-sharp fa-solid fa-right-long"></i></a>
-                        <img src="img/G;SDKVN.png" alt="">
+                        <img src="img/Rectangle 6 (1).png" alt="">
                     </div>
 
 
