--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                         </div>
                         <img src="/img/3.png" alt=""></div>
                     <div class="advantages__card">
-                        <h2>1</h2>
+                        <h2>3</h2>
                         <div class="advantages__card-texts">
                             <h3>O’sish imkoniyati</h3>
                             <p>Qulay muhitda ta’lim olish imkoniyati</p>
@@ -167,7 +167,7 @@
                                 <h3>IT Park orali olingan sertifakatni tekshirish imkoniyati</h3>
                                 <p>Dasturlashni o’rganib, muammolarga kreativ yechim berishni o’rganisnh</p>
                             </div>
-                            <a href="#!">Tekshirish <i class="fa-sharp fa-solid fa-right-long"></i></a>
+                            <a href="Sertifikat tasdiqlandi.html">Tekshirish <i class="fa-sharp fa-solid fa-right-long"></i></a>
                         </div>
                     </div>
                     <div class="certificate_content_card"><img src="/img/546654546684.png" alt=""></div>
