--- a/index.html
+++ b/index.html
@@ -47,7 +47,17 @@
                             class="fa-sharp fa-solid fa-right-long"></i></a>
                 </div>
                 <div class="header__content-image">
-                    <img src="./img/Group 97.jpg" alt="">
+                    <div class="carousel">
+                        <div class="slides">
+                          <img src="https://picsum.photos/1280/720?random=1" alt="slide image" class="slide">
+                          <img src="https://picsum.photos/1280/720?random=2" alt="slide image" class="slide">
+                          <img src="https://picsum.photos/1280/720?random=3" alt="slide image" class="slide">
+                        </div>
+                        <div class="controls">
+                          <div class="control prev-slide">&#9668;</div>
+                          <div class="control next-slide">&#9658;</div>
+                        </div>
+                      </div>
                     <div class="header__content-image-bottom flex">
                         <span>#dasturlash_kurslari</span>
                         <span>#coworking</span>
@@ -152,8 +162,17 @@
 
         <section class="swiper">
             <div class="container">
-
-                <img src="/img/Caraousel Rectangle.png" alt="">
+                <div class="carousel">
+                    <div class="slidess">
+                      <img src="https://picsum.photos/1280/720?random=1" alt="slide image" class="slide">
+                      <img src="https://picsum.photos/1280/720?random=2" alt="slide image" class="slide">
+                      <img src="https://picsum.photos/1280/720?random=3" alt="slide image" class="slide">
+                    </div>
+                    <div class="controls">
+                      <div class="control prev-slide">&#9668;</div>
+                      <div class="control next-slide">&#9658;</div>
+                    </div>
+                  </div>
             </div>
 
         </section>
@@ -264,6 +283,8 @@
     </footer>
 
     </div>
+
+    <script src="/apps.js"></script>
 </body>
 
 </html>
