Azamat katta qildi

--- a/index.html
+++ b/index.html
@@ -30,10 +30,16 @@
                     <li class="header__item">
                         <a href="#!" class="header__link">A’loqa</a>
                     </li>
+                    <button class="close" id="close">X</button>
                 </ul>
                 <div class="header__nav-tel">
                     <i class="fa-solid fa-phone"></i>
                     <a href="#!">+998 98 764 43 21</a>
+                </div>
+                <div class="nav__menu">
+                    <div class="line"></div>
+                    <div class="line"></div>
+                    <div class="line"></div>
                 </div>
             </div>
         </nav>
