--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <nav class="header__nav">
             <div class="container">
                 <a href="#!" class="header__logo"><img src="img/logo.svg" alt=""></a>
-                <ul class="header__list">
+                <ul class="header__list ">
                     <li class="header__item">
                         <a href="#!" class="header__link">Bosh Sahifa</a>
                     </li>
@@ -30,12 +30,14 @@
                     <li class="header__item">
                         <a href="#!" class="header__link">A’loqa</a>
                     </li>
+                    <li class="header__lin header__item"><a href="#!"><i class="fa-solid fa-phone"></i>+998 98 764 43 21</a></li>
+                 
                     <button class="close" id="close">X</button>
                 </ul>
-                <div class="header__nav-tel">
+                <!-- <div class="header__nav-tel">
                     <i class="fa-solid fa-phone"></i>
                     <a href="#!">+998 98 764 43 21</a>
-                </div>
+                </div> -->
                 <div class="nav__menu">
                     <div class="line"></div>
                     <div class="line"></div>
