--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     <li class="header__item">
                         <a href="#!" class="header__link">A’loqa</a>
                     </li>
-                    <li class="header__lin header__item"><a href="#!"><i class="fa-solid fa-phone"></i>+998 98 764 43 21</a></li>
+                    <li class="header__lin"><a href="#!"><i class="fa-solid fa-phone"></i>+998 98 764 43 21</a></li>
                  
                     <button class="close" id="close">X</button>
                 </ul>
@@ -43,6 +43,7 @@
                     <div class="line"></div>
                     <div class="line"></div>
                 </div>
+                
             </div>
         </nav>
         <div class="header__content">
