--- a/index.html
+++ b/index.html
@@ -171,17 +171,29 @@
 
         <section class="swiper">
             <div class="container">
-                <div class="carousel">
-                    <div class="slidess">
-                      <img src="https://picsum.photos/1280/720?random=1" alt="slide image" class="slide">
-                      <img src="https://picsum.photos/1280/720?random=2" alt="slide image" class="slide">
-                      <img src="https://picsum.photos/1280/720?random=3" alt="slide image" class="slide">
-                    </div>
-                    <div class="controls">
-                      <div class="control prev-slide">&#9668;</div>
-                      <div class="control next-slide">&#9658;</div>
-                    </div>
-                  </div>
+                 <!-- Automatic Slideshow Images -->
+  <div class="mySlides">
+    <!-- <img src="/img/knbknlnklknlkhn;l.jpg" > -->
+    <div class="myTxt1 ">
+      <h3>Los Angeles</h3>
+      <p><b>We had the best time playing at Venice Beach!</b></p>   
+    </div>
+  </div>
+  <div class="mySlides  ">
+    <img src="img//KARTA.png" >
+    <div class=" myTxt1">
+      <h3>New York</h3>
+      <p><b>The atmosphere in New York is lorem ipsum.</b></p>    
+    </div>
+  </div>
+  <div class="mySlides">
+    <img src="img/Caraousel Rectangle.png" >
+    <div class=" myTxt1">
+      <h3>Chicago</h3>
+      <p><b>Thank you, Chicago - A night we won't forget.</b></p>    
+    </div>
+  </div>
+
             </div>
 
         </section>
