--- a/index.html
+++ b/index.html
@@ -174,13 +174,14 @@
                  <!-- Automatic Slideshow Images -->
   <div class="mySlides">
     <!-- <img src="/img/knbknlnklknlkhn;l.jpg" > -->
+    <img src="img/itttttttttttttttttttttttttttttttttttttttttttttttt.jpg" alt="">
     <div class="myTxt1 ">
       <h3>Los Angeles</h3>
       <p><b>We had the best time playing at Venice Beach!</b></p>   
     </div>
   </div>
   <div class="mySlides  ">
-    <img src="img//KARTA.png" >
+    <img src="img/ittttttttttttttttttttttttttttttttttttttttttttttttttttttt.avif" >
     <div class=" myTxt1">
       <h3>New York</h3>
       <p><b>The atmosphere in New York is lorem ipsum.</b></p>    
