--- a/index.html
+++ b/index.html
@@ -56,17 +56,22 @@
                             class="fa-sharp fa-solid fa-right-long"></i></a>
                 </div>
                 <div class="header__content-image">
-                    <div class="carousel">
-                        <div class="slides">
-                          <img src="https://picsum.photos/1280/720?random=1" alt="slide image" class="slide">
-                          <img src="https://picsum.photos/1280/720?random=2" alt="slide image" class="slide">
-                          <img src="https://picsum.photos/1280/720?random=3" alt="slide image" class="slide">
+                    <div class="swiper_it">
+
+                        <div class="carousel">
+                            <div class="slides">
+                                <img src="https://picsum.photos/1280/720?random=1" alt="slide image" class="slide">
+                                <img src="https://picsum.photos/1280/720?random=2" alt="slide image" class="slide">
+                                <img src="https://picsum.photos/1280/720?random=3" alt="slide image" class="slide">
+                            </div>
+                            <div class="controls">
+                                <div class="control prev-slide">&#9668;</div>
+                                <div class="control next-slide">&#9658;</div>
+                            </div>
                         </div>
-                        <div class="controls">
-                          <div class="control prev-slide">&#9668;</div>
-                          <div class="control next-slide">&#9658;</div>
-                        </div>
-                      </div>
+                        <img class="carousel_logos" src="img/logolar.png" alt="">
+                        <img class="carousel_logos" src="img/Frame 11.png" alt="">
+                    </div>
                     <div class="header__content-image-bottom flex">
                         <span>#dasturlash_kurslari</span>
                         <span>#coworking</span>
