--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
                                 <div class="control next-slide">&#9658;</div>
                             </div>
                         </div>
-                        <img class="carousel_logos" src="img/logolar.png" alt="">
-                        <img class="carousel_logos" src="img/Frame 11.png" alt="">
+                        <img class="l1 carousel_logos" src="img/logolar.png" alt="">
+                        <img class="l2 carousel_logoss" src="img/Frame 11.png" alt="">
                     </div>
                     <div class="header__content-image-bottom flex">
                         <span>#dasturlash_kurslari</span>
@@ -177,7 +177,7 @@
         <section class="swiper">
             <div class="container">
                  <!-- Automatic Slideshow Images -->
-  <div class="mySlides">
+  <div class="mySlides mySlides_image">
     <!-- <img src="/img/knbknlnklknlkhn;l.jpg" > -->
     <img src="img/itttttttttttttttttttttttttttttttttttttttttttttttt.jpg" alt="">
     <div class="myTxt1 ">
@@ -185,14 +185,14 @@
       <p><b>We had the best time playing at Venice Beach!</b></p>   
     </div>
   </div>
-  <div class="mySlides  ">
-    <img src="img/ittttttttttttttttttttttttttttttttttttttttttttttttttttttt.avif" >
+  <div class="mySlides  mySlides_image2">
+    <img src="img/ittttttttttttttttttttttttttttttttttttttttttttttttttttttt.avif"  >
     <div class=" myTxt1">
       <h3>New York</h3>
       <p><b>The atmosphere in New York is lorem ipsum.</b></p>    
     </div>
   </div>
-  <div class="mySlides">
+  <div class="mySlides  mySlides_image3">
     <img src="img/Caraousel Rectangle.png" >
     <div class=" myTxt1">
       <h3>Chicago</h3>
