--- a/index.html
+++ b/index.html
@@ -181,22 +181,26 @@
     <!-- <img src="/img/knbknlnklknlkhn;l.jpg" > -->
     <img src="img/itttttttttttttttttttttttttttttttttttttttttttttttt.jpg" alt="">
     <div class="myTxt1 ">
-      <h3>Los Angeles</h3>
-      <p><b>We had the best time playing at Venice Beach!</b></p>   
+      <h3>It parkda dasturlash kurslari</h3>
+      <p>Web dasturlash</p> 
+      <p>Dasturlashni o'rganib, muommolarga kreativ yechim topishni organing</p> 
+        
     </div>
   </div>
   <div class="mySlides  mySlides_image2">
     <img src="img/ittttttttttttttttttttttttttttttttttttttttttttttttttttttt.avif"  >
     <div class=" myTxt1">
-      <h3>New York</h3>
-      <p><b>The atmosphere in New York is lorem ipsum.</b></p>    
+        <h3>It parkda dasturlash kurslari</h3>
+        <p>Web dasturlash</p> 
+        <p>Dasturlashni o'rganib, muommolarga kreativ yechim topishni organing</p>     
     </div>
   </div>
   <div class="mySlides  mySlides_image3">
     <img src="img/Caraousel Rectangle.png" >
     <div class=" myTxt1">
-      <h3>Chicago</h3>
-      <p><b>Thank you, Chicago - A night we won't forget.</b></p>    
+        <h3>It parkda dasturlash kurslari</h3>
+        <p>Web dasturlash</p>     
+        <p>Dasturlashni o'rganib, muommolarga kreativ yechim topishni organing</p> 
     </div>
   </div>
 
@@ -216,7 +220,7 @@
                             <a href="Sertifikat tasdiqlandi.html">Tekshirish <i class="fa-sharp fa-solid fa-right-long"></i></a>
                         </div>
                     </div>
-                    <div class="certificate_content_card"><img src="/img/546654546684.png" alt=""></div>
+                    <div class="certificate_content_card"><img class="certificate_content_card_foto" src="/img/546654546684.png" alt="">  <img class="certificate_content_cardit" src="/img/footerlogo.png" alt=""> </div>
                 </div>
             </div>
         </section>
