--- a/index.html
+++ b/index.html
@@ -176,12 +176,14 @@
 
         <section class="swiper">
             <div class="container">
-                 <!-- Automatic Slideshow Images -->
-  <div class="mySlides mySlides_image">
+
+
+
+                <div class="mySlides mySlides_image">
     <!-- <img src="/img/knbknlnklknlkhn;l.jpg" > -->
     <img src="img/itttttttttttttttttttttttttttttttttttttttttttttttt.jpg" alt="">
     <div class="myTxt1 ">
-      <h3>It parkda dasturlash kurslari</h3>
+      <h3>It parkda dasturlash kurslari </h3>
       <p>Web dasturlash</p> 
       <p>Dasturlashni o'rganib, muommolarga kreativ yechim topishni organing</p> 
         
@@ -190,17 +192,17 @@
   <div class="mySlides  mySlides_image2">
     <img src="img/ittttttttttttttttttttttttttttttttttttttttttttttttttttttt.avif"  >
     <div class=" myTxt1">
-        <h3>It parkda dasturlash kurslari</h3>
-        <p>Web dasturlash</p> 
-        <p>Dasturlashni o'rganib, muommolarga kreativ yechim topishni organing</p>     
+        <h3>It parkda dasturlash kurslari kurslari </h3>
+        <p>Web dasturlash dasturlash</p> 
+        <p>Dasturlashni o'rganib, muommolarga kreativ yechim topishni organing  topishni organing</p>     
     </div>
   </div>
   <div class="mySlides  mySlides_image3">
     <img src="img/Caraousel Rectangle.png" >
     <div class=" myTxt1">
-        <h3>It parkda dasturlash kurslari</h3>
-        <p>Web dasturlash</p>     
-        <p>Dasturlashni o'rganib, muommolarga kreativ yechim topishni organing</p> 
+        <h3>It parkda dasturlash kurslari kurslari kurslari</h3>
+        <p>Web dasturlash dasturlash dasturlash</p>     
+        <p>Dasturlashni o'rganib, muommolarga kreativ yechim topishni organing  topishni organing  topishni organing</p> 
     </div>
   </div>
 
