--- a/index.html
+++ b/index.html
@@ -245,7 +245,13 @@
                 <div class="footer_content">
                     <div class="footer_content_img">
                         <!-- <img src="/img/pasti_loptop.png" alt=""> -->
-                        <img src="/img/Rectangle 3.svg" alt="">
+                        <img class="footer_content_img_log" src="/img/Rectangle 3.svg" alt="">
+                        <div class="footer_content_img_it">
+                            <img class="footer_content_img_log1" src="img/pasti_logo.png" alt="">
+                            <img class="footer_content_img_log2" src="img/Frame 11.png" alt="">
+
+                        </div>
+                        
                     </div>
                     <div class="footer_content_text">
                         <h4>
@@ -264,7 +270,6 @@
 
                 </div>
             </div>
-
             <div class="footer-icon">
                 <div class="container">
                     <div class="footer-icon_top flex">
