--- a/index.html
+++ b/index.html
@@ -131,8 +131,8 @@
                           <a href="#products">Mobil dasturlash</a>
                           <a href="#services">Grafik design</a>
                           <a href="#contact">Ingliz tili</a>
-                          <a href="#gallery">Yana ko’rsatish <i class="fa-sharp fa-solid fa-down-long"></i></a>
                         </li>
+                        <a class="sidebar_icon" href="#svipe" >Yana ko’rsatish <i class="fa-sharp fa-solid fa-down-long"></i></a>
                       </ul>
                     </nav>
                 </div>
@@ -188,7 +188,7 @@
 
         </section>
 
-        <section class="swiper">
+        <section id="svipe" class="swiper">
             <div class="container">
 
 
