--- a/index.html
+++ b/index.html
@@ -125,14 +125,14 @@
                 <div class="side-bar">
                     <nav class="navigation">
                         <ul>
+                            <h3>Kurslar</h3>
                             <li>
-                                <h3>Kurslar</h3>
                           <a class="active" href="#about">Web dasturlash</a>
                           <a href="#products">Mobil dasturlash</a>
                           <a href="#services">Grafik design</a>
                           <a href="#contact">Ingliz tili</a>
                         </li>
-                        <a class="sidebar_icon" href="#svipe" >Yana ko’rsatish <i class="fa-sharp fa-solid fa-down-long"></i></a>
+                        <a class="sidebar_icon" href="#about">Yana ko’rsatish <i class="fa-sharp fa-solid fa-down-long"></i></a>
                       </ul>
                     </nav>
                 </div>
@@ -194,7 +194,9 @@
 
 
                 <div class="mySlides mySlides_image">
-    <!-- <img src="/img/knbknlnklknlkhn;l.jpg" > -->
+
+
+
     <img src="img/itttttttttttttttttttttttttttttttttttttttttttttttt.jpg" alt="">
     <div class="myTxt1 ">
       <h3>It parkda dasturlash kurslari </h3>
@@ -258,7 +260,7 @@
             <div class="container">
                 <div class="footer_content">
                     <div class="footer_content_img">
-                        <!-- <img src="/img/pasti_loptop.png" alt=""> -->
+
                         <img class="footer_content_img_log" src="/img/Rectangle 3.svg" alt="">
                         <div class="footer_content_img_it">
                             <img class="footer_content_img_log1" src="img/pasti_logo.png" alt="">
